# tls-scan

./: .travis.yml  CHANGELOG  Dockerfile  INSTALL  LICENSE.txt  Makefile  Makefile.am  README.md  _config.yml  bootstrap-arm64.sh  bootstrap.sh  build-arm64.sh  build-x86-64-openssl-1.1.0.sh  build-x86-64-openssl-1.1.1.sh  build-x86-64.sh  cert-parser.c  common.c  configure.ac  gnutls13.c  main.c  proto-adapters.c
.github/workflows/: build.yml  release.yml  semgrep.yml
include/: cert-parser.h  common.h  proto-adapters.h
man/: tls-scan
test/: README.md  dsa-scan.out  ecdsa-test.crt
tests/: dsa-test.crt  dsa-test.key  ecdsa-scan.out  ecdsa-test.key  rsa-scan.out  rsa-test.crt  rsa-test.key
